tests/negative/typecheck/negate.orng
// negate.orng:5:22: error: expected a value of type `Bool`, got a value of type `Int`
// fn main() -> Bool {-3}
//                     ^
// 
fn main() -> Bool {-3}